--- a/Leslie calcul.vcxproj
+++ b/Leslie calcul.vcxproj
@@ -129,9 +129,11 @@
   <ItemGroup>
     <ClCompile Include="Caculator.cpp" />
     <ClCompile Include="Leslie calcul.cpp" />
+    <ClCompile Include="Parseur.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Caculator.h" />
+    <ClInclude Include="Parseur.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
